--- a/index.html
+++ b/index.html
@@ -36,117 +36,126 @@
                 </div>
             </label>
             <div class="expand">
-                <h3>Size Options</h3>
-                <div class="size-options">
-                    <label>
-                        <input type="radio" name="size" value="small">
-                        Small
-                    </label>
-                    <label>
-                        <input type="radio" name="size" value="medium">
-                        Medium
-                    </label>
-                    <label>
-                        <input type="radio" name="size" value="large">
-                        Large
-                    </label>
-                </div>
-                <h3>Color Options</h3>
-                <div class="color-options">
-                    <label>
-                        <input type="radio" name="color" value="red">
-                        Red
-                    </label>
-                    <label>
-                        <input type="radio" name="color" value="blue">
-                        Blue
-                    </label>
-                    <label>
-                        <input type="radio" name="color" value="green">
-                        Green
-                    </label>
+                <div class="details">
+                    <span></span>
+                    <span class="">Size</span>
+                    <span class="">Colour</span>
+                    <span class="serial">#1</span>
+                    <select class="">
+                        <option value="S">S</option>
+                        <option value="M">M</option>
+                        <option value="L">L</option>
+                    </select>
+                    <select class="">
+                        <option value="Black">Black</option>
+                        <option value="White">White</option>
+                        <option value="Red">Red</option>
+                    </select>
                 </div>
             </div>
-            <!-- <button class="collapse">Collapse</button> -->
         </main>
-        <!-- <div class="product-card most-popular">
-            <label>
-                <input type="radio" name="product" value="product-2">
-                Product 2
-            </label>
-            <div class="expand">
-                <h3>Size Options</h3>
-                <div class="size-options">
-                    <label>
-                        <input type="radio" name="size" value="small">
-                        Small
-                    </label>
-                    <label>
-                        <input type="radio" name="size" value="medium">
-                        Medium
-                    </label>
-                    <label>
-                        <input type="radio" name="size" value="large">
-                        Large
-                    </label>
+        <div class="product-card most-popular">
+            <label class="extra-space">
+                <input type="radio" name="product" value="product-1">
+                <div class="space-between">
+                    <div class="column">
+                        <span class="bold">2 Unit <span class="percentage"> 20% Off</span></span>
+                        <span class="secondary-text">Standard Price</span>
+                    </div>
+                    <div class="column"></div>
+                    <div class="column end">
+                        <span class="bold">$18.00 USD </span>
+                        <span class="cutted">$24.00 USD</span>
+                    </div>
                 </div>
-                <h3>Color Options</h3>
-                <div class="color-options">
-                    <label>
-                        <input type="radio" name="color" value="red">
-                        Red
-                    </label>
-                    <label>
-                        <input type="radio" name="color" value="blue">
-                        Blue
-                    </label>
-                    <label>
-                        <input type="radio" name="color" value="green">
-                        Green
-                    </label>
+            </label>
+            <span class="badge">MOST POPULAR</span>
+            <div class="expand">
+                <div class="details">
+                    <span></span>
+                    <span class="">Size</span>
+                    <span class="">Colour</span>
+                    <span class="serial">#1</span>
+                    <select class="">
+                        <option value="S">S</option>
+                        <option value="M">M</option>
+                        <option value="L">L</option>
+                    </select>
+                    <select class="">
+                        <option value="Black">Black</option>
+                        <option value="White">White</option>
+                        <option value="Red">Red</option>
+                    </select>
+                    <span class="serial">#2</span>
+                    <select class="">
+                        <option value="S">S</option>
+                        <option value="M">M</option>
+                        <option value="L">L</option>
+                    </select>
+                    <select class="">
+                        <option value="Black">Black</option>
+                        <option value="White">White</option>
+                        <option value="Red">Red</option>
+                    </select>
                 </div>
             </div>
-            <button class="collapse">Collapse</button>
         </div>
         <div class="product-card">
             <label>
-                <input type="radio" name="product" value="product-3">
-                Product 3
+                <input type="radio" name="product" value="product-1">
+                <div class="space-between">
+                    <div class="column">
+                        <span class="bold">3 Unit <span class="percentage"> 30% Off</span></span>
+                        <span class="secondary-text">Standard Price</span>
+                    </div>
+                    <div class="column"></div>
+                    <div class="column end">
+                        <span class="bold">$24.00 USD </span>
+                        <span class="cutted">$24.00 USD</span>
+                    </div>
+                </div>
             </label>
             <div class="expand">
-                <h3>Size Options</h3>
-                <div class="size-options">
-                    <label>
-                        <input type="radio" name="size" value="small">
-                        Small
-                    </label>
-                    <label>
-                        <input type="radio" name="size" value="medium">
-                        Medium
-                    </label>
-                    <label>
-                        <input type="radio" name="size" value="large">
-                        Large
-                    </label>
-                </div>
-                <h3>Color Options</h3>
-                <div class="color-options">
-                    <label>
-                        <input type="radio" name="color" value="red">
-                        Red
-                    </label>
-                    <label>
-                        <input type="radio" name="color" value="blue">
-                        Blue
-                    </label>
-                    <label>
-                        <input type="radio" name="color" value="green">
-                        Green
-                    </label>
+                <div class="details">
+                    <span></span>
+                    <span class="">Size</span>
+                    <span class="">Colour</span>
+                    <span class="serial">#1</span>
+                    <select class="">
+                        <option value="S">S</option>
+                        <option value="M">M</option>
+                        <option value="L">L</option>
+                    </select>
+                    <select class="">
+                        <option value="Black">Black</option>
+                        <option value="White">White</option>
+                        <option value="Red">Red</option>
+                    </select>
+                    <span class="serial">#2</span>
+                    <select class="">
+                        <option value="S">S</option>
+                        <option value="M">M</option>
+                        <option value="L">L</option>
+                    </select>
+                    <select class="">
+                        <option value="Black">Black</option>
+                        <option value="White">White</option>
+                        <option value="Red">Red</option>
+                    </select>
+                    <span class="serial">#3</span>
+                    <select class="">
+                        <option value="S">S</option>
+                        <option value="M">M</option>
+                        <option value="L">L</option>
+                    </select>
+                    <select class="">
+                        <option value="Black">Black</option>
+                        <option value="White">White</option>
+                        <option value="Red">Red</option>
+                    </select>
                 </div>
             </div>
-            <button class="collapse">Collapse</button>
-        </div> -->
+        </div>
         <footer>
             <div class="between">
                 <span class="bold pink">Free Delivery</span>
